--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -7,8 +7,8 @@
   &__info {
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    width: 300px;
+    justify-content: space-between;
+    width: 230px;
 
     &-link {
       text-align: right;
