--- a/src/components/contact-info/contact-info.scss
+++ b/src/components/contact-info/contact-info.scss
@@ -1,10 +1,17 @@
 .contacts-info {
+  margin: 40px auto;
   &__contacts {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    @media screen and (max-width: 480px) {
+      flex-direction: column;
+    }
     &-item {
       display: flex;
       align-items: center;
+      @media screen and (max-width: 480px) {
+        margin: auto;
+      }
     }
     &--icon {
       margin-right: 15px;
