--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ body {
 }
 
 a {
-  color: #cacaff;
+  color: #FFBA08;
 }
 
 p {
@@ -30,5 +30,12 @@ p {
   transition-duration: .4s;
   &:hover {
     transform: scale(1.15);
+  }
+}
+
+.background {
+  &-lighter {
+    background-color: #323640;
+    border-radius: 2.5%;
   }
 }
