--- a/src/index.scss
+++ b/src/index.scss
@@ -14,16 +14,21 @@ body {
 }
 
 a {
-  color: #FFBA08;
+  color: #7297ff;
 }
 
 p {
   margin: 5px 0;
 }
 
+h2 {
+  text-align: center;
+}
+
 .max-width {
   max-width: 1150px;
   margin: auto;
+  padding: 40px;
 }
 
 .scale-on-hover {
