--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -1,3 +1,16 @@
 .about {
-
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &-techs {
+    img {
+      width: 64px;
+      margin: 5px;
+    }
+  }
+  &-text {
+    padding: 0 10px;
+  }
 }
