--- a/src/components/contact-info/contact-info.scss
+++ b/src/components/contact-info/contact-info.scss
@@ -1,5 +1,7 @@
 .contacts-info {
   margin: 40px auto;
+  border-top: 1px solid rgba(80, 80, 80, 0.25);
+  border-bottom: 1px solid rgba(80, 80, 80, 0.25);
   &__contacts {
     display: flex;
     justify-content: space-between;
