--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -63,8 +63,8 @@
 
   img[title="Under Construction"] {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 20px;
+    right: 20px;
     transform: rotate(50deg);
     width: 300px;
   }
