--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -5,24 +5,8 @@
   align-items: center;
 
   &__info {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 230px;
 
-    &-link {
-      text-align: right;
-
-      img {
-        width: 16px;
-      }
-    }
-
-    &-qr {
-      img {
-        width: 60px;
-      }
-    }
+    margin-left: auto;
 
     @media screen and (max-width: 1024px) {
       margin: auto;
@@ -56,7 +40,6 @@
       }
     }
 
-    padding: 40px 0 0;
     position: relative;
 
   }
@@ -66,7 +49,7 @@
     top: 20px;
     right: 20px;
     transform: rotate(50deg);
-    width: 300px;
+    width: 180px;
     @media screen and (max-width: 768px) {
       width: 180px;
       top:0;
