--- a/src/common.scss
+++ b/src/common.scss
@@ -66,6 +66,11 @@ h2 {
   padding: 20px;
   box-sizing: border-box;
 
+  @media screen and (max-width:768px) {
+    width: 100%;
+    left: 0;
+  }
+
   h2 {
     text-align: center;
   }
