--- a/src/components/work-experience/work-experience.scss
+++ b/src/components/work-experience/work-experience.scss
@@ -79,4 +79,13 @@
       line-height: 1.4;
     }
   }
+
+  &-notice {
+    text-align: center;
+    padding: 0 0 60px;
+    &__text {
+      font-size: 2em;
+      margin: 0 0 20px;
+    }
+  }
 }
