--- a/src/components/contact-info/contact-info.scss
+++ b/src/components/contact-info/contact-info.scss
@@ -1,7 +1,8 @@
 .contacts-info {
-  margin: 40px auto;
+  margin: 40px auto 0;
   border-top: 1px solid rgba(80, 80, 80, 0.25);
   border-bottom: 1px solid rgba(80, 80, 80, 0.25);
+  padding-bottom: 40px;
   &__contacts {
     display: flex;
     justify-content: space-between;
